# RKnowledge

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  OLLAMA_OPTIMIZATION.md  README.md  demo.tape  demo_data.kg.json  install.sh  llms.txt
.github/workflows/: ci.yml  pages.yml  release.yml
demo_data/: ai_concepts.md  graph.json  knowledge_graph.graphml  software_architecture.txt
docs/: index.html  llms.txt
docs/adrs/: 001-property-based-tenant-isolation.md  002-domain-aware-prompts.md  003-manual-graph-manipulation.md
skill/: SKILL.md
skill/assets/: docker-compose.yml
skill/references/: REFERENCE.md
skill/scripts/: install.sh
src/: config.rs  error.rs  export.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  auth.rs  build.rs  communities.rs  doctor.rs  export.rs  init.rs  mod.rs  path.rs  query.rs  stats.rs  viz.rs
src/graph/: analytics.rs  builder.rs  community.rs  mod.rs  neo4j.rs
src/llm/: adaptive_processor.rs  anthropic.rs  batch_processor.rs  google.rs  mod.rs  ollama.rs  openai.rs  parsing.rs  prompts.rs
src/parser/: adaptive_chunker.rs  chunker.rs  html.rs  markdown.rs  mod.rs  pdf.rs  text.rs
tests/: cli_tests.rs
